--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "apollo-server": "^3.6.2",
     "atob": "^2.1.2",
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
