--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.3.0",
+    "graphql-middleware": "^6.1.13",
+    "graphql-shield": "^7.5.0",
     "graphql-tools": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
